deploymentpython.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythondep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pythondep
  template:
    metadata:
      labels:
        app: pythondep
    spec:
      containers:
      - name: pythondep
        image: nanekhachatryan/pythondep:v2
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: pythondep
spec:
  type: NodePort
  selector:
    app: pythondep
  ports:
  -  protocol: TCP
     port: 5000
     targetPort: 5000
     nodePort: 32000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythondep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: py.nane.aft
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pythondep
            port:
              number: 5000
